# switch-rs

./: Cargo.toml  Makefile  README.md
.vim/: coc-settings.json
switch-rs/: Cargo.toml
switch-rs-common/: Cargo.toml
switch-rs-common/src/: lib.rs
switch-rs-ebpf/: Cargo.toml
switch-rs-ebpf/src/: main.rs
switch-rs/src/: main.rs
switch-rs/src/af_xdp/: af_xdp.rs  mod.rs
switch-rs/src/af_xdp/interface/: interface.rs
switch-rs/src/cli/: cli.rs
switch-rs/src/flow_manager/: flow_manager.rs  mod.rs
switch-rs/src/handler/: handler.rs
switch-rs/src/network_state/: mod.rs  network_state.rs
xtask/src/: build_ebpf.rs  run.rs
