[package]
name = "switch-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
switch-rs-common = { path = "../switch-rs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "full"] }
mac_address = "1.1.5"
xdpilone = "1.0.3"
futures = "0.3.30"
pnet = "0.34.0"
hostname = "0.3.1"
kanal = "0.1.0-pre8"
inquire = "0.7.1"
bytes = "1.5.0"
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
ipnet = "2.9.0"
async-trait = "0.1.77"
pnet_macros = "0.34.0"
pnet_macros_support = "0.34.0"

[[bin]]
name = "switch-rs"
path = "src/main.rs"
